--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
 <link rel="stylesheet" href="./assets/styles.css">
-    <title>website</title>
+    <title>Horiseon: Social Solution Services, Inc</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <div id="search-engine-optimization" class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
