updating semantic elements starting w/ header and nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <div class="header">
+<header class="header">
+    <nav>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -22,8 +23,9 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+    </nav>
     </div>
+</header>
     <div id="search-engine-optimization" class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
