--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             </ul>
         </div>
     </nav>
-    
-</header>
+    </header>
+
+    <main>
     <div id="search-engine-optimization" class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -74,12 +75,14 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+</main>
+<footer class="footer">
+    <!-- <div class="footer"> -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    <!-- </div> -->
+</footer>
 </body>
-
 </html>
