updating seo link to be clickable

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     </header>
 
     <main>
-    <div id="search-engine-optimization" class="hero"></div>
+<section>
+    <div class="hero"></div>
+</section>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO Picture" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
