added more semantic html elements ie section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <section>
     <div class="hero"></div>
 </section>
-    <div class="content">
+<section class="content">
+    <!-- <div class="content"> -->
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="SEO Picture" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -54,7 +55,9 @@
             </p>
         </div>
     </div>
-    <div class="benefits">
+</section>
+<section class="benefits">
+    <!-- <div class="benefits"> -->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation Picture" />
@@ -77,6 +80,7 @@
             </p>
         </div>
     </div>
+</section>
 </main>
 <footer class="footer">
     <!-- <div class="footer"> -->
