--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <header class="header">
-        <h1>Hori<span alt="Horiseon Logo" class="seo">seo</span>n</h1>
+        <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -24,11 +24,10 @@
             </ul>
     </nav>
     </header>
+ <main>
 
-    <main>
-<section>
-    <div class="hero"></div>
-</section>
+    <figure class="hero"></figure>
+
 <section class="content">
     <!-- <div class="content"> -->
         <div id="search-engine-optimization" class="search-engine-optimization">
