added my comments back to explain what i changed about the site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Horiseon: Social Solution Services, Inc</title>
 </head>
 
+<!-- added header and removed any div. also added nav links. also repaired the broken link on the search engine optimization to make the link be redirected when clicked -->
+
 <body>
 <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -25,6 +27,8 @@
             </ul>
     </nav>
     </header>
+
+<!-- added main semantic element as well as figure and removed any divs and replaced with section -->
  <main>
 
     <figure class="hero"></figure>
@@ -54,7 +58,7 @@
         </section>
     </section>
 
-</section> -->
+</section> 
 <section class="benefits">
 
         <section class="benefit-lead">
@@ -81,6 +85,8 @@
 
 </section>
 </main>
+
+<!-- added footer and changed the h2 in the footer to h4 so that the h elements were in order -->
 <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
